pkg/cmd/testdata/out/from-ingress-to-multi-gateways-gwapi.gateway.yaml
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: nginx-ingress-1
  spec:
    gatewayClassName: nginx-ingress-1
    listeners:
    - hostname: gateway-1
      name: gateway-1-http
      port: 80
      protocol: HTTP
  status: {}
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: nginx-ingress-2
  spec:
    gatewayClassName: nginx-ingress-2
    listeners:
    - hostname: gateway-2
      name: gateway-2-http
      port: 80
      protocol: HTTP
  status: {}
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: nginx-ingress-3
  spec:
    gatewayClassName: nginx-ingress-3
    listeners:
    - hostname: gateway-3
      name: gateway-3-http
      port: 80
      protocol: HTTP
  status: {}
