pkg/cmd/testdata/out/from-ingress-to-simple-gwapi.all.yaml
Gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: hello-world
  spec:
    gatewayClassName: hello-world
    listeners:
    - hostname: foo.bar.com
      name: foo-bar-com-http
      port: 80
      protocol: HTTP
  status: {}
HTTPRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: foo-bar-com
  spec:
    hostnames:
    - foo.bar.com
    parentRefs:
    - name: hello-world
    rules:
    - backendRefs:
      - name: test
        port: 80
      matches:
      - path:
          type: PathPrefix
          value: /foo
  status:
    parents: []
