pkg/cmd/testdata/out/from-ingress-to-simple-gwapi.gateway.json
[
    {
        "kind": "Gateway",
        "apiVersion": "gateway.networking.k8s.io/v1beta1",
        "metadata": {
            "name": "hello-world",
            "creationTimestamp": null
        },
        "spec": {
            "gatewayClassName": "hello-world",
            "listeners": [
                {
                    "name": "foo-bar-com-http",
                    "hostname": "foo.bar.com",
                    "port": 80,
                    "protocol": "HTTP"
                }
            ]
        },
        "status": {}
    }
]
