pkg/cmd/testdata/out/from-ingress-to-simple-gwapi.gateway.yaml
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: hello-world
  spec:
    gatewayClassName: hello-world
    listeners:
    - hostname: foo.bar.com
      name: foo-bar-com-http
      port: 80
      protocol: HTTP
  status: {}
